# ActiveRT

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  clang-tidy-output.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml  static-analysis.yml
cmake/: ActiveRTConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  changelog.rst  conf.py  index.rst  misra_deviations.md  requirements.txt
docs/_static/: custom.css
docs/api/: active_objects.rst  cli.rst  configuration.rst  event_pools.rst  index.rst  queue_utilities.rst  statistics.rst  types.rst
docs/development/: index.rst  misra.md  testing.md  workflows.md
docs/img/: .$alloc_path.drawio.dtmp  .$ao_life.drawio.bkp  alloc_path.drawio  ao_life.drawio
docs/release_notes/: index.rst
docs/user_guide/: index.rst
docs/user_guide/cli/: index.rst  setup.md  using_cli.md
docs/user_guide/fundamentals/: active_objects.md  helper_macros.md  index.rst  overflow_policies.md  pool_allocation.md  pool_concepts.md  posting.md  static_vs_dynamic.md
docs/user_guide/getting_started/: basics.md  configuration.md  index.rst  installation.md  quickstart.md  what_is_activert.md
docs/user_guide/notifications/: index.rst  notification_tasks.md  notify_vs_semaphore.md
docs/user_guide/queues/: event_routing.md  index.rst  queue_sets.md  single_queue.md
docs/user_guide/statistics/: enabling_stats.md  index.rst  what_is_monitored.md
include/: activert.h  activert_active.h  activert_cli.h  activert_config.h  activert_event.h  activert_queue.h  activert_stats.h  activert_types.h
src/: activert_active.c  activert_cli.c  activert_event.c  activert_notify.c  activert_post.c  activert_queue.c  activert_stats.c
test/: CMakeLists.txt
test/common/: freertos_test_main.c
test/integration/: test_integration_stress.c
test/platform_stubs/: embedded_cli.h  portmacro.h
test/posix_config/: FreeRTOSConfig.h
test/unit/: test_active_basic.c  test_dynamic_paths.c  test_event_pool.c  test_regression_core.c  test_regression_lifecycle.c  test_stats_registry.c
test/windows_config/: FreeRTOSConfig.h
tools/: build_docs.py  check_style.py
tools/cmake/modules/: CompilerWarnings.cmake  GetVersion.cmake
tools/misra/: FreeRTOSConfig.h  misra.json  run_misra_check.py
